--- a/index.html
+++ b/index.html
@@ -48,26 +48,10 @@
         </div>
 
         <!-- Cards Grid -->
-        <div id="cards-grid">
-          <!-- <button
-            id="cardId"
-            class="relative shadow-xl transition-all duration-500 [transform-style:preserve-3d] select-none place-items-center grid rounded-2xl bg-white font-bold text-3xl size-20"
-          >
-            <div
-              id="front-card"
-              class="absolute inset-0 grid place-items-center [backface-visibility:hidden] [transform:rotateY(180deg)]"
-            >
-              🎃
-            </div>
-
-            <div
-              id="back-card"
-              class="absolute inset-0 grid place-items-center [backface-visibility:hidden]"
-            >
-              ?
-            </div>
-          </button> -->
-        </div>
+        <div
+          id="cards-grid"
+          class="grid grid-cols-3 gap-3 place-items-center"
+        ></div>
       </div>
     </main>
 
