feat: add movesCounter

--- a/index.html
+++ b/index.html
@@ -36,16 +36,10 @@
 
           <!-- Counters -->
           <div class="my-4 flex gap-2 justify-center">
-            <div>
-              <span class="block w-24 rounded-2xl bg-white px-2 py-3">
-                Moves: 0
-              </span>
-            </div>
+            <div id="moves-counter" class="w-28 text-center"></div>
 
-            <div class="text-center">
-              <span class="block w-24 rounded-2xl bg-white px-2 py-3"
-                >00:00</span
-              >
+            <div class="text-center w-28">
+              <span class="block rounded-2xl bg-white px-2 py-3">00:00</span>
             </div>
           </div>
         </div>
