feat: Implement reset game

--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
               >
             </div>
 
-            <div>
-              <button class="block rounded-2xl bg-white px-2 py-3">
-                Reset Game <span>(space)</span>
-              </button>
-            </div>
+            <div id="reset-game"></div>
           </div>
 
           <!-- Counters -->
