feat: Config updates

--- a/index.html
+++ b/index.html
@@ -54,5 +54,8 @@
     </main>
 
     <script type="module" src="/src/ts/main.ts"></script>
+    <noscript>
+      <!-- <meta http-equiv="Refresh" content="0;URL=ShowErrorPage.html" /> -->
+    </noscript>
   </body>
 </html>
