feat: add 2 pars more

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <!-- Info -->
         <div>
           <!-- Difficult & Reset -->
-          <div class="flex gap-2">
+          <div class="flex gap-2 justify-center">
             <div>
-              <span class="block rounded-2xl bg-white px-2 py-3"
-                >Cards Quantity: 10</span
+              <span class="block rounded-2xl bg-white px-3 py-4"
+                >Cards quantity: 12</span
               >
             </div>
 
@@ -48,7 +48,7 @@
         <!-- Cards Grid -->
         <div
           id="cards-grid"
-          class="grid grid-cols-3 gap-3 place-items-center"
+          class="grid grid-cols-3 gap-y-3 place-items-center"
         ></div>
       </div>
     </main>
