--- a/index.html
+++ b/index.html
@@ -22,34 +22,31 @@
       <!-- Heading -->
       <h1 class="text-4xl text-center">Memory Game</h1>
 
-      <!-- Main Grid -->
-      <div class="mt-6 p-2 bg-slate-300 rounded-2xl shadow-[]">
-        <!-- Info -->
-        <div>
-          <!-- Difficult & Reset -->
-          <div class="flex gap-2 justify-center">
-            <div>
-              <span class="block rounded-2xl bg-white px-3 py-4"
-                >Cards quantity: 12</span
-              >
-            </div>
-
-            <div id="reset-game"></div>
+      <!-- Main -->
+      <div
+        class="mt-6 lg:mt-16 min-[1440px]:mt-32 p-2 w-[min(500px,_100%)] mx-auto py-6 bg-[#d8ebff] rounded-2xl shadow-2xl border-black"
+      >
+        <!-- Difficult & Reset -->
+        <div class="flex gap-2 justify-center">
+          <div>
+            <span class="block rounded-2xl bg-white px-4 py-3">Cards: 12</span>
           </div>
 
-          <!-- Counters -->
-          <div class="my-4 flex gap-2 justify-center">
-            <div id="moves-counter" class="w-28 text-center"></div>
-
-            <div id="timer" class="text-center w-28"></div>
-          </div>
+          <div id="reset-game"></div>
         </div>
 
         <!-- Cards Grid -->
         <div
           id="cards-grid"
-          class="grid grid-cols-3 gap-y-3 place-items-center"
+          class="my-8 grid grid-cols-3 gap-y-4 sm:grid-cols-4 sm:gap-y-6 place-items-center"
         ></div>
+
+        <!-- Counters -->
+        <div class="flex gap-2 justify-center">
+          <div id="moves-counter" class="w-28 text-center"></div>
+
+          <div id="timer" class="text-center w-28"></div>
+        </div>
       </div>
     </main>
 
