--- a/index.html
+++ b/index.html
@@ -50,9 +50,25 @@
       </div>
     </main>
 
+    <footer class="text-center mt-10">
+      <p>
+        <em
+          ><strong
+            ><a
+              class="underline hover:text-[#0080ff] focus:text-[#0080ff]"
+              href="https://github.com/mauriciompf/memory_game_m"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Maurício.</a
+            ></strong
+          ></em
+        >
+      </p>
+    </footer>
+
     <script type="module" src="/src/ts/main.ts"></script>
     <noscript>
-      <!-- <meta http-equiv="Refresh" content="0;URL=ShowErrorPage.html" /> -->
+      <p class="text-center">Javascript disabled</p>
     </noscript>
   </body>
 </html>
